--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "mongodb": "^2.0.45"
   },
-  "engines" : {
-    "node" : "0.12.7"
+  "engines": {
+    "node": "0.12.7"
   }
 }
